# NativeLibsCommon

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DEV_DOCS.md  Dockerfile.build  Makefile  README.md  conandata.yml  conanfile.py  requirements.txt
.github/actions/announce-release-slack/: action.yml
.github/actions/filter-private-changelog/: action.yml
.github/actions/markdown-to-mrkdwn/: action.yml
.github/actions/next-version/: action.yml
.github/actions/next-version-simple/: action.yml
.github/actions/prepare-deploy/: action.yml
.github/actions/resolve-build-run/: action.yml
.github/actions/upload-conan-recipes/: action.yml
.github/workflows/: announce-release.yml  autotag.yml  create-release-pr.yml  hello-world.yaml  increment-version.yml  mirror.yaml  mirror.yml  on_pull_request.yml  prepare-release.yml  publish-release.yml  publish-snapshot.yml  release-conanfiles.yml  resolve-images.yml  run-tests.yml  runner-resources.yml  setup-workflows-public.yml  tag-conanfiles-release.yml  test-download-aar.yml  test-windows.yml  test.yml  upload-conan-recipes.yml
android/NativeLibsCommon/: settings.gradle
android/NativeLibsCommon/lib/: build.gradle
bamboo-specs/: bamboo.yaml  docker-clean.yaml  increment-version.yaml  native-libs-common.yaml  release-conanfiles.yaml  upload-conan-recipes.yaml
cmake/: add_unit_test.cmake  conan.cmake  conan_bootstrap.cmake  conan_provider.cmake  conan_provider.cmake.patch
common/: CMakeLists.txt  base64.cpp  cesu8.cpp  clock.cpp  conanfile.py  conanfile.txt  coro_exception_handler.cpp  error.cpp  file.cpp  guid_utils.cpp  logger.cpp  net_utils.cpp  network_monitor.cpp  network_monitor_impl.h  regex.cpp  rotating_log_to_file.cpp  route_resolver.cpp  socket_address.cpp  system_error.cpp  time_utils.cpp  url.cpp  utils.cpp  wfp_firewall.cpp
common/cmake/: add_unit_test.cmake  conan.cmake
common/include/common/: autofd.h  base64.h  cache.h  cesu8.h  cidr_range.h  clock.h  coro.h  defs.h  error.h  file.h  format.h  gtest_coro.h  guid_utils.h  logger.h  move_only_function.h  net_utils.h  network_monitor.h  parallel.h  regex.h  rotating_log_to_file.h  route_resolver.h  socket_address.h  system_error.h  time_utils.h  url.h  utils.h  wfp_firewall.h
common/test/: base64_test.cpp  cache_test.cpp  cidr_range_test.cpp  coro_exception_test.cpp  coro_test.cpp  error_test.cpp  logger_test.cpp  move_only_function_test.cpp  net_utils_test.cpp  network_monitor_test.cpp  regex_test.cpp  rotating_log_to_file_test.cpp  socket_address_test.cpp  time_utils_test.cpp  url_test.cpp  utils_test.cpp
conan/: settings_user.yml
conan/profiles/: android.jinja  android.toolchain.cmake  apple-asan.jinja  apple-asan.toolchain.cmake  apple.jinja  apple.toolchain.cmake  linux-asan.jinja  linux-asan.toolchain.cmake  linux-musl-asan.jinja  linux-musl-asan.toolchain.cmake  linux-musl.jinja  linux-musl.toolchain.cmake  linux.jinja  linux.toolchain.cmake  windows-msvc.jinja
conan/recipes/: export.cmd  export.sh
conan/recipes/boringssl/: conanfile.py
conan/recipes/boringssl-2023-05-17/: CMakeLists.txt  conanfile.py
conan/recipes/boringssl-2023-09-01/: conanfile.py
conan/recipes/curl/: conanfile.py
conan/recipes/curl-7.85.0/: conanfile.py
conan/recipes/curl-8.1.1/: CMakeLists.txt  conanfile.py
conan/recipes/detours/: conanfile.py
conan/recipes/klib/: conanfile.py
conan/recipes/ldns/: CMakeLists.txt  conanfile.py
conan/recipes/libevent/: conanfile.py
conan/recipes/libsodium/: CMakeLists.txt  conanfile.py
conan/recipes/libuv/: conandata.yml  conanfile.py
conan/recipes/llhttp-9.1.3/: conanfile.py
conan/recipes/llhttp-9.3.0/: conanfile.py
conan/recipes/nghttp2/: conanfile.py
conan/recipes/nghttp2-1.56.0/: conanfile.py
conan/recipes/nghttp3/: conanfile.py
conan/recipes/nghttp3-0.11.0/: conanfile.py
conan/recipes/nghttp3-0.15.0/: conanfile.py
conan/recipes/nghttp3-0.7.1/: conanfile.py
conan/recipes/nghttp3-1.0.0/: CMakeLists.txt  conanfile.py
conan/recipes/ngtcp2/: conanfile.py
conan/recipes/ngtcp2-0.15.0/: conanfile.py
conan/recipes/ngtcp2-0.19.1/: CMakeLists.txt  conanfile.py
conan/recipes/ngtcp2-0.8.0/: conanfile.py
conan/recipes/ngtcp2-0.9.0/: conanfile.py
conan/recipes/ngtcp2-1.0.1/: CMakeLists.txt  conanfile.py
conan/recipes/ngtcp2-1.22.1/: CMakeLists.txt  conanfile.py
conan/recipes/ngtcp2-old/: conanfile.py
conan/recipes/openssl/: conanfile.py
conan/recipes/pcre2/: CMakeLists.txt  conanfile.py
conan/recipes/protobuf/: CMakeLists.txt  conanfile.py
conan/recipes/quiche/: conanfile.py
conan/recipes/tldregistry/: CMakeLists.txt  conanfile.py  update.sh
conan2/recipes/boringssl-2023-05-17/: CMakeLists.txt  conanfile.py
conan2/recipes/boringssl-2023-09-01/: conanfile.py
conan2/recipes/detours/: conanfile.py
conan2/recipes/ldns/: CMakeLists.txt
conan2/recipes/libevent/: CMakeLists.txt  conanfile.py
conan2/recipes/libsodium/: CMakeLists.txt  conanfile.py
conan2/recipes/libuv/: conandata.yml  conanfile.py
conan2/recipes/nghttp2/: conanfile.py
conan2/recipes/nghttp3-1.0.0/: CMakeLists.txt
conan2/recipes/ngtcp2-0.19.1/: conanfile.py
conan2/recipes/ngtcp2-1.0.1/: conanfile.py
conan2/recipes/pcre2/: conandata.yml  conanfile.py
conan2/recipes/protobuf/: conanfile.py
conan2/recipes/quiche/: conanfile.py
conan2/recipes/tldregistry/: CMakeLists.txt
http/: CMakeLists.txt  headers.cpp  http1.cpp  http2.cpp  http3.cpp  util.cpp
http/include/common/http/: headers.h  http1.h  http2.h  http3.h  util.h
http/test/: headers_test.cpp  http1_client_test.cpp  http1_server_test.cpp  http2_client_test.cpp  http2_server_test.cpp  http3_server_side.cpp  http3_test.cpp  http3_test_common.h
scripts/: conan_local_export.py  export_conan.cmd  export_conan.py  export_conan.sh  increment_version.sh  set_version.sh  update_changelog.py
tls/: CMakeLists.txt  cert_utils.cpp  make_ssl.cpp
tls/include/common/tls/: cert_utils.h  make_ssl.h
tls/test/: ja4.cpp  ja4.h  make_ssl_test.cpp
(+107 files in other folders)
